--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -7,6 +7,10 @@
         <variable
             name="task"
             type="com.gabmarquez.taskroom.repository.local.Task"/>
+
+<!--        <variable-->
+<!--            name="clickListener"-->
+<!--            type="com.gabmarquez.taskroom.view.list.Adapter.TaskListListener"/>-->
     </data>
 
     <androidx.cardview.widget.CardView
@@ -15,6 +19,8 @@
         card:cardCornerRadius="5dp"
         card:cardElevation="5dp"
         card:cardUseCompatPadding="true">
+
+<!--        android:onClick="@{() -> clickListener.onClick(task)}">-->
 
         <View
             android:layout_width="match_parent"
