databinding better practices mvvm

--- a/app/src/main/res/layout/fragment_list_task.xml
+++ b/app/src/main/res/layout/fragment_list_task.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <variable
+            name="viewmodel"
+            type="com.gabmarquez.taskroom.viewmodel.ListTaskViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
